fix jumped left image to various small viewports

--- a/style/hero.css
+++ b/style/hero.css
@@ -142,10 +142,52 @@
         margin-bottom: 7px;
     }
 
+    .hero__container {
+        margin:0;
+        padding:0;
+    }
+
  }
 
  @media (max-width: 760px) {
+    .hero__container {
+        flex-direction: column;
+    }
+    .hero__img {
+        width: 100%;
+    }
+
+    .hero__left {
+        margin:0;
+    }
 }
 
  @media (max-width: 580px) {
+    .hero__left {
+        margin:0 -10px;
+    }
+
+    .hero__title {
+        font-size: 28px;
+        margin-bottom: 16px;
+    }
+
+    .hero__description {
+        font-size: 14px;
+        margin-bottom: 16px;
+    }
+
+    .hero__down {
+        max-width: 57px;
+        font-size: 12px;
+    }
+
+    .hero__down-img{
+        width: 40px;
+    }
+
+    .hero__container {
+        margin:0;
+        padding:0;
+    }
  }
